<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Investment.Invest_Edit">

    <TextView
        android:id="@+id/invest_edit_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Edit Item"
        android:textSize="@dimen/subheadings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/invest_edit_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Save Changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invest_edit_months" />

    <EditText
        android:id="@+id/invest_edit_amountBorrowed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="173dp"
        android:ems="10"
        android:hint="amount borrowed"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/invest_edit_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/invest_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/invest_edit_amountBorrowed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/invest_edit_compounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="compounds per year"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/invest_edit_interestRate"
        app:layout_constraintTop_toBottomOf="@+id/invest_edit_interestRate" />

    <EditText
        android:id="@+id/invest_edit_months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="how many month?"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/invest_edit_compounds"
        app:layout_constraintTop_toBottomOf="@+id/invest_edit_compounds" />

    <EditText
        android:id="@+id/invest_edit_interestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="interest rate"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/invest_edit_amountBorrowed"
        app:layout_constraintTop_toBottomOf="@+id/invest_edit_amountBorrowed" />
</androidx.constraintlayout.widget.ConstraintLayout>