<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9DDF4"
    android:orientation="vertical"
    android:outlineProvider="background"
    tools:context=".Investment.Invest_Page">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue">

            <TextView
                android:id="@+id/textInvestment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Total investments"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/invest_maketValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="10000 $"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/textInvestment"
                app:layout_constraintTop_toBottomOf="@+id/textInvestment" />

            <ImageButton
                android:id="@+id/imgProfile"
                android:layout_width="122dp"
                android:layout_height="98dp"
                android:layout_marginEnd="4dp"
                android:background="?attr/selectableItemBackground"
                android:padding="12dp"
                android:src="@drawable/investmentbig"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.619" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="INVESTMENTS"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="180dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="200dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/invest_fab_addOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_marginTop="50px"
            android:src="@drawable/baseline_attach_money_24"
            app:backgroundTint="#82B1FF" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invest_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp" />

</LinearLayout>