...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/reg_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="50dp"
        android:text="@string/landPage_register"
        android:textSize="@dimen/reg_log"
        app:layout_constraintBottom_toTopOf="@+id/getUserName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/landPage_Email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/getPassword"
        app:layout_constraintTop_toBottomOf="@+id/getPassword" />

    <EditText
        android:id="@+id/getDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
